--- a/pubfeeds/core/templates/section.xml
+++ b/pubfeeds/core/templates/section.xml
@@ -4,7 +4,7 @@
     <title>{{ section.name }}</title>
     {% for article in articles %}
     <item>
-        <link>{{ article.get_absolute_url }}</link>
+        <link>http://pubfeeds.theonion.com{{ article.get_absolute_url }}</link>
     </item>
     {% endfor %}
 </channel>
